Fix overlapping ordered list numbers by hiding default list style

--- a/css/style.css
+++ b/css/style.css
@@ -373,6 +373,7 @@ body {
 .post-detail .content ol {
     margin-left: 2rem;
     margin-bottom: 1rem;
+    list-style: none;
 }
 
 .back-link {
